--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 database.driver=org.mariadb.jdbc.Driver
-database.url=jdbc:mariadb://bxrkpxzi3naht7j9ry8m-mysql.services.clever-cloud.com:3306
+database.url=jdbc:mariadb://bxrkpxzi3naht7j9ry8m-mysql.services.clever-cloud.com:3306/bxrkpxzi3naht7j9ry8m
 database.user=uetpoe4v9wkawonh
 database.pass=1bqiegs2Mry2Pko6sffi
